@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-qt/qtconcurrent:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtprintsupport:5 dev-qt/qtscript:5 dev-qt/qtsql:5 dev-qt/qtwebkit:5 dev-qt/qtwidgets:5 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=Project aiming to recreate classic Opera (12.x) UI using Qt5
-EAPI=5
-HOMEPAGE=http://otter-browser.org/
-KEYWORDS=~amd64
-LICENSE=GPL-3
-RDEPEND=dev-qt/qtconcurrent:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtprintsupport:5 dev-qt/qtscript:5 dev-qt/qtsql:5 dev-qt/qtwebkit:5 dev-qt/qtwidgets:5
-SLOT=0
-SRC_URI=https://github.com/Emdek/otter/archive/v0.9.03.tar.gz -> otter-0.9.03.tar.gz
-_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=3b62a1bde85819ead0152cd32acbae63
