@@ -1,4 +1,6 @@
 DIST jekyll-sitemap-0.7.0.tar.gz 62244 SHA256 6e55c763317f646d92dc5827d0e83aeec604b6f9434b6c55684c1efb3101e4d1 SHA512 d225a1947a9972293530c4a22de6d9d111d0dd1d1664c633d28b4979d033e88b941b802715d42e6d16346818e10da681fcae1afe873b0ebca9ae509b070d7c82 WHIRLPOOL 4e4207245c30b950b75285d634bf6dbfdc301dadd599567b86925b0d9b5bc8be8c7e70451e9bcc5c1fcddf68633e23980f2255e02ea8246e6f4f1685e2234c34
+DIST jekyll-sitemap-0.8.0.tar.gz 62276 SHA256 2744c9a7a2903cf8e9bea22b6c23f6f78ae2903dd599d1ffde745d4a0de5e5cc SHA512 39638bdcae72925a9c89673dad88a7b4f4035d2d1c6e25220f2e046cdd056bd609159fd8a14a289a3a9b80826c919a3dc803b8ab501c927592611c9ba9c463cd WHIRLPOOL 9a634507e8f9c2eb25d8b1070bb181f6f1d1608a45283dbb9ea469f42e6d458ced688217617e16430faf29d32a2048a89fe5e3e5edc261829af8a0f0881a9bb4
 EBUILD jekyll-sitemap-0.7.0.ebuild 858 SHA256 e84ec653da5f8494f7f486cc9b52283840f8e1f635026f88d0626d636af11306 SHA512 b6699708cc5357f14df9fc724437ebf4612fedcdcffe5cf04541c2397254c1ab7e48d8c4b963a4d1534e94d40d7118b39489f74ef139453223ebfffb58f8bd7b WHIRLPOOL 0554abe6b753760a7752acd01e089c2c5d6927d9095259e742db34e5e36cdf4564f27d0d32f9da9ded19e427cef99fdf9ae82f0430accda65ef067ef0232119f
-MISC ChangeLog 1243 SHA256 8000819d9b21a1d656b59bf745e20a3363b78c91049a0a078891855b33dda467 SHA512 2ba9ad2738bc0d62dc77f2ac7c00413b7c86ba5ad5c6036ef3933063e0c7e24f91ef0e390b024dbdfbcd4b44d12a9b1580a07cc209ca9258953f82cd101efc5e WHIRLPOOL 9ac1ed861433797cc4026b0421551effd8a6def93540f30d62a00be80391792efd660519a5101b950e1cef72d49ebbc23a702afc857c7dbb383cf315f7a3e3e8
+EBUILD jekyll-sitemap-0.8.0.ebuild 709 SHA256 9056ae3fddf6ee37ca0e22819bf009ad4c9b3ecbfcaebd8b5f7b28defc95ce41 SHA512 0baf0ef226ee9e4c831f9ec16be82ccc9df874c74f70b06c6c2f61489ca979c1f65cede4dcabaad787e5a4f5af54663376f9bb653adf6f19edd3e1dd518f544e WHIRLPOOL e6955b14c986b601e4983502665d658d66c5c8b55e1f005ef5e3fc4c271bb0fcf9795e38509c3159b8afd7b702e8d22c8fa6890c5eb5b884b28538904c144ab2
+MISC ChangeLog 1375 SHA256 b720a083ee369e1b40de771b677608de6a71dc90ad454d457bc642cddd93efff SHA512 4b265ddf9ed9cb062aa37dca416c1d872e3307f526282d8034f11f276131c648872730578b78dd56a262fd17080022ae4e68978299ee3fbad1845a56620d7832 WHIRLPOOL 0b747044d51d2c8c2f6ea823a67dc76cc504a8916d379b9257f20bdc8b0b3c907a97faada61e6a6e47032b464dc865fce8db90f66b1f964e69943fce3dbb85c9
 MISC metadata.xml 231 SHA256 9c04e1ed256c8293b1120d9b56de16e3ee5ff6cdb3967d517d46c5974c23d67a SHA512 0aaf70d152f2b3a4b333fccde6f5c9fbb6cac1a9ecf3e2b2ddb57a1c260b3f0e7bdd215edad17f959b2a3324929bf446164341531783431c3435d1b956d09d83 WHIRLPOOL d631165d8a2dd82731e34fed2e3c09437b8c0d383da28c3e0a5f704196afc1810a7efee388e6b558493e82fa61cc799ab3b93eb1b7b17464dd380efdcba60d06
