@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST otter-0.9.03.tar.gz 1497171 SHA256 852a7f334dc10a77b32b436297a54093e790d8694d3d3ede2e7e9209f4f38010 SHA512 76804819d9b6e51a1e618799a786183cb90d3b0693e77ca3e410bbfac3d51e2ae357eb7a7a1fa69b93cb16bcb3f973a296a64c34858c87b3561ad810046ae281 WHIRLPOOL b75d47a77266de52564931956515df86a0d2b863e436c6b862079ce754e188061c61f3426bc743e65c90fd3c06cf9596e964fa58b70d8a65fc734c154595d5c2
 DIST otter-0.9.04.tar.gz 1829210 SHA256 687bbca09b5bc20626f3b5e2bbccb7b10c35af8cb93dfdce31e0a3b61e5e8a87 SHA512 4845c083bde142e5bc4b991ad7481cb5368d125132a13c042e8a9f1658f483fa9ab2a04c47c1ccb9d27029f4453ef06d9994d4f21bb42716dbba1f69a06a8054 WHIRLPOOL 1e2bf5639e81c02801c285fd003635b4d1b27a8569f893584887405c877eac71129b29ce8010b25b113e78ce1cd05ebb4def4b6101e981d002f509684dbbbc46
-EBUILD otter-0.9.03.ebuild 1146 SHA256 c3c0a26631c7e4339fb35c439ecabfb6de460dd33e63d0b5006d6976bcd31e4a SHA512 16bb593ed782a78a9be2edff7727733e6db714f120e54ace7a5a0d2010de158819c102017cadfa03c5a673c27b9c96322e4ed66e9da17b7b82fc32697119cddf WHIRLPOOL 712a290f2039c37482f17e172d9e34799286259b6aedb5b994d000d66e567c1e5cacf76abcb4a75b1cfc774cdf0d08b6791569c52f80a9f6efadda6939dac786
-EBUILD otter-0.9.04.ebuild 1146 SHA256 6572acb98a5596c30a707000d61841dc7f18e3e1851af612fa3be726e608be9d SHA512 90094fb2ec1dd559d18af9b142dd260cf0ab7e4dee14793e5b39f263fc1ac565417b0f3b2a39e3e19a20a6f861d42c91fedcb6ced487d22a247241fd2aeb0edd WHIRLPOOL 5bceb395bea90cb22a9d56d392df39fdbe9f0ccce8e5d3b01cb72564c363a641a3fabb0ae6a15d0d415d8ece644dcfbaabe58637d0269f7446b6795d58d24c4c
-EBUILD otter-9999.ebuild 1122 SHA256 afe26718b6b6de8092d1ab5771c251672ad0aa7b589c469c03607b9d51c0946d SHA512 c2d2a7597b14263c37996a00c7c69e955b554f254d4943afdd4e72ae81ab24ef0d47b7511f66d88d094ab074a78d6d6c8e84dd8cbbbac4b2665f5c159e724024 WHIRLPOOL 1f77faa36136e67f312e603aa63baf68a3895a95148ac1aa3414a56247542adc49af23f614e5fefa8bd3b3ac30f9dcc1016e473dd417fe7bf1bbe84194590d5a
-MISC ChangeLog 1233 SHA256 e62e40b8845d2d402f7eab86ce60e7718a4db90e9956ce5e16432de45abad5e7 SHA512 fc1e2c4d292ffa251565b9bbf64ded9f7bef8cd4404ab9fae13736db1bcedf74361a145dcd5b28c4ed4511d8a83672dd2567a3783a46bba6501776a4bc7f05ea WHIRLPOOL f4dc5c096d2db55a44cf056f48df1acecf403164e26af1a33b27a48ae0b62b6fa744cfea5bdfece704a5ed6ac1978e9e4fbb49ade5f51892d8f9cf8d91463631
+EBUILD otter-0.9.04.ebuild 1169 SHA256 0dd8dfbe550c64ac057a3568534dd23a24a229f03bd9224e1485a17ace7979e4 SHA512 344afa8fddb669153ebf10b68898d99f43488aca04fe92ae2c7fd92d05a779a557c961d7bbcad03a744371f253477039456d17b355d82d79d033cec22810e93c WHIRLPOOL 380f71acd97c468e868517411fbab170f98650d1da288454555ea456a929162ddd1fb8787e638471a6a2a3a6c7ca285c1a3789d272e2dfee6ed340b968893bc5
+EBUILD otter-9999.ebuild 1145 SHA256 6c91aacbf8d8d35043c512434c60ace7ea22d402e6d41c6ae07880ba0e2aa4d0 SHA512 3a431e61517b1a13672e73c44e5364916269786cd6fe1c672252316cf5833d55f29f0084c43dbc5175bbcd6e8f87bf7a619db73b2f00c5e7b95e6b4e665419c2 WHIRLPOOL 72ab8167813a35d3b846db6e3f2571d64ed9b9c34c39c2c134ed6254b89bebab6a6079d7c9e60ec2253013f987d7780552c9c15594618bb8177f1cd567df1371
+MISC ChangeLog 1394 SHA256 d1b4cfdd7e3f3fec243a852ecb2c02db3dca6b2e7ef242415c4adb0bb1fabde7 SHA512 6b145b6b168c1bb5b9b7d11dd543e343b4f30280b0d5bc547c9428d48860c5a2a05426c2c259bb878311385af1de6fc3929a9b8305dfc4396aabc7887e781f2c WHIRLPOOL da2f7cdf50ea521f3983f12ca02b732128090d24f7a97822f472eb6e796e5c51b9efd53f4c3e3f1fc0a3189dd907a685c4f882c71ef0cd01c38395ebd5cca582
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS+lGYACgkQVWmRsqeSphMP7gCfc4ngI8oGwDl0ZF/wLKA00f0c
-45MAn1QM/TAUk8tO61+PU9KXpHe1nTvF
-=4FUk
+iEYEAREIAAYFAlTSEoEACgkQVWmRsqeSphMligCbB+oHeLP6x5zxB/OuBLiF7BvZ
+toMAn1Zc/rwciuahVpffOGAvSMYVUeGq
+=RVnO
 -----END PGP SIGNATURE-----
