@@ -1,6 +1,10 @@
 # ChangeLog for www-client/otter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/otter/ChangeLog,v 1.8 2015/01/20 17:46:13 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/otter/ChangeLog,v 1.9 2015/02/04 12:37:20 jer Exp $
+
+  04 Feb 2015; Jeroen Roovers <jer@gentoo.org> -otter-0.9.03.ebuild,
+  otter-0.9.04.ebuild, otter-9999.ebuild:
+  Depend on dev-qt/qtmultimedia:5 by NeverLoved.
 
   20 Jan 2015; Jeroen Roovers <jer@gentoo.org> otter-9999.ebuild:
   Fix dodoc.
