@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/jekyll-sitemap
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll-sitemap/ChangeLog,v 1.7 2014/12/08 10:28:23 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll-sitemap/ChangeLog,v 1.8 2015/02/04 12:54:04 mrueg Exp $
+
+*jekyll-sitemap-0.8.0 (04 Feb 2015)
+
+  04 Feb 2015; Manuel Rüger <mrueg@gentoo.org> +jekyll-sitemap-0.8.0.ebuild:
+  Version bump.
 
 *jekyll-sitemap-0.7.0 (08 Dec 2014)
 
